...
    });
    Navigator.of(context)
        .push(MaterialPageRoute(builder: (context) => OrderPage(order)));
  };

  return Scaffold(
    key: Key('CheckoutPage'),
    appBar: AppBar(
      backgroundColor: Colors.white,
      iconTheme: IconThemeData(color: Colors.black),
      elevation: 1,
      centerTitle: true,
      title: Text("Checkout", style: AppTextStyle.sectionHeader(context)),
...
          Container(
              decoration: BoxDecoration(
                  border:
                      Border(top: BorderSide(width: 1, color: Colors.black12))),
              padding: EdgeInsets.all(16),
              child: ActionButton(
                key: Key('OrderButton'),
                label: Text("Order and pay"),
                onPressed: onOrderClicked,
              ))
        ],
      )
    ]),
...
