...
      ));
}

@swidget
Widget _continueButton(BuildContext context, Basket basket) =>
    RawMaterialButton(
        key: Key('ContinueButton'),
        shape: RoundedRectangleBorder(
          borderRadius: BorderRadius.all(Radius.circular(20.0)),
        ),
        fillColor: ButtonTheme.of(context).colorScheme.primary,
        child: Container(
            padding: EdgeInsets.symmetric(horizontal: 12),
...
            ),
          ])
      .toList();
  list.removeLast();

  return Scaffold(
      key: Key('BasketPage'),
      appBar: AppBar(
        backgroundColor: Colors.white,
        iconTheme: IconThemeData(color: Colors.black),

        // leading: IconButton(icon: Icon(Icons.close), onPressed: () {}),
        elevation: 1,
...
